Adicionando o Problema das Damas do Xadrez

--- a/PLI/socorro_aereo.ipynb
+++ b/PLI/socorro_aereo.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Problema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Após um período de intensas chuvas, uma vasta região da Amazônia está alagada muito além dos níveis normalmente admissíveis. Várias localidades estão completamente ilhadas, sem acesso por terra. As ligações por barco estão perigosas em face das cheias dos rios. O governo resolveu providenciar uma ponte aérea de suprimentos envolvendo Manaus e outras três cidades que atuarão como polos de distribuição de remédios, gêneros de primeira necessidade e combustível."
    ]
   },
@@ -208,7 +215,7 @@
    "metadata": {},
    "source": [
     "Minimizar o custo total diário de operação:<br>\n",
-    "$ min Z = \\sum\\limits_{k \\in K} \\sum\\limits_{j \\in C\\setminus\\{0\\}} custo\\_viagem_{k,j} \\cdot y_{k,j}$"
+    "$$ \\min Z = \\sum\\limits_{k \\in K} \\sum\\limits_{j \\in C\\setminus\\{0\\}} custo\\_viagem_{k,j} \\cdot y_{k,j}$$"
    ]
   },
   {
