Atualizando o problema das Rainhas no Xadrez

--- a/PLI/rainhas_xadrez.ipynb
+++ b/PLI/rainhas_xadrez.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problema das Damas do Jogo de Xadrez"
+    "# Problema das Rainhas do Jogo de Xadrez"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em um tabuleiro de xadrez (padrão 8x8) vazio, sabendo-se que uma alocação em casa preta vale o dobro do que em casa branca, determine a localização ótima para 8 damas de modo que nenhuma delas seja ameaçada pelas demais."
+    "Em um tabuleiro de xadrez (padrão 8x8) vazio, sabendo-se que uma alocação em casa preta vale o dobro do que em casa branca, determine a localização ótima para 8 rainhas de modo que nenhuma delas seja ameaçada pelas demais."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "source": [
     "$x_{ij} \\in {0,1}$:<br>\n",
     "$$x_{ij} = \\begin{cases}\n",
-    "                1, & \\text{se há uma dama na casa (i,j)} \\\\\\\\\n",
+    "                1, & \\text{se há uma rainha na casa (i,j)} \\\\\\\\\n",
     "                0, & \\text{caso contrário}\n",
     "            \\end{cases}$$"
    ]
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1) Exatamente uma dama por linha"
+    "##### 1) Exatamente uma rainha por linha"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2) Exatamente uma dama por coluna"
+    "##### 2) Exatamente uma rainha por coluna"
    ]
   },
   {
@@ -147,14 +147,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Nota_: essas duas primeiras restrições já garantem 8 damas no tabuleiro."
+    "_Nota_: essas duas primeiras restrições já garantem 8 rainhas no tabuleiro."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3) No máximo uma dama em cada diagonal principal"
+    "##### 3) No máximo uma rainha em cada diagonal principal"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 4) No máximo uma dama em cada diagonal secundária"
+    "##### 4) No máximo uma rainha em cada diagonal secundária"
    ]
   },
   {
@@ -333,15 +333,15 @@
      "text": [
       "GLPSOL--GLPK LP/MIP Solver 5.0\n",
       "Parameter(s) specified in the command line:\n",
-      " --write C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpeh2r2662.glpk.raw --wglp C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpc472ekvr.glpk.glp\n",
-      " --cpxlp C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpuqv4wryy.pyomo.lp\n",
-      "Reading problem data from 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpuqv4wryy.pyomo.lp'...\n",
-      "C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpuqv4wryy.pyomo.lp:532: warning: lower bound of variable 'x2' redefined\n",
-      "C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpuqv4wryy.pyomo.lp:532: warning: upper bound of variable 'x2' redefined\n",
+      " --write C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmp6rpj9x27.glpk.raw --wglp C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmp5bwrvitf.glpk.glp\n",
+      " --cpxlp C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmph5xaq1c2.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmph5xaq1c2.pyomo.lp'...\n",
+      "C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmph5xaq1c2.pyomo.lp:532: warning: lower bound of variable 'x2' redefined\n",
+      "C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmph5xaq1c2.pyomo.lp:532: warning: upper bound of variable 'x2' redefined\n",
       "46 rows, 64 columns, 256 non-zeros\n",
       "64 integer variables, all of which are binary\n",
       "596 lines were read\n",
-      "Writing problem data to 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpc472ekvr.glpk.glp'...\n",
+      "Writing problem data to 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmp5bwrvitf.glpk.glp'...\n",
       "479 lines were written\n",
       "GLPK Integer Optimizer 5.0\n",
       "46 rows, 64 columns, 256 non-zeros\n",
@@ -369,7 +369,7 @@
       "INTEGER OPTIMAL SOLUTION FOUND\n",
       "Time used:   0.0 secs\n",
       "Memory used: 0.2 Mb (198806 bytes)\n",
-      "Writing MIP solution to 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmpeh2r2662.glpk.raw'...\n",
+      "Writing MIP solution to 'C:\\Users\\rlmou\\AppData\\Local\\Temp\\tmp6rpj9x27.glpk.raw'...\n",
       "119 lines were written\n"
      ]
     }
@@ -411,25 +411,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Posições das damas (linha, coluna):\n",
-      " - Dama em (1, 7) na casa preta\n",
-      " - Dama em (2, 4) na casa preta\n",
-      " - Dama em (3, 2) na casa branca\n",
-      " - Dama em (4, 5) na casa branca\n",
-      " - Dama em (5, 8) na casa branca\n",
-      " - Dama em (6, 1) na casa branca\n",
-      " - Dama em (7, 3) na casa preta\n",
-      " - Dama em (8, 6) na casa preta\n"
+      "Posições das rainhas (linha, coluna):\n",
+      " - Rainha em (1, 7) na casa preta\n",
+      " - Rainha em (2, 4) na casa preta\n",
+      " - Rainha em (3, 2) na casa branca\n",
+      " - Rainha em (4, 5) na casa branca\n",
+      " - Rainha em (5, 8) na casa branca\n",
+      " - Rainha em (6, 1) na casa branca\n",
+      " - Rainha em (7, 3) na casa preta\n",
+      " - Rainha em (8, 6) na casa preta\n"
      ]
     }
    ],
    "source": [
-    "print(\"\\nPosições das damas (linha, coluna):\")\n",
+    "print(\"\\nPosições das rainhas (linha, coluna):\")\n",
     "for i in model.I:\n",
     "    for j in model.J:\n",
     "        if pyo.value(model.x[i, j]) > 0.5:\n",
     "            cor = \"preta\" if (i + j) % 2 == 0 else \"branca\"\n",
-    "            print(f\" - Dama em ({i}, {j}) na casa {cor}\")"
+    "            print(f\" - Rainha em ({i}, {j}) na casa {cor}\")"
    ]
   },
   {
@@ -442,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Tabuleiro (Q para dama, . vazio):\n",
+      "Tabuleiro (Q para rainha, . vazio):\n",
       " . . . . . . Q .\n",
       " . . . Q . . . .\n",
       " . Q . . . . . .\n",
@@ -455,7 +455,7 @@
     }
    ],
    "source": [
-    "print(\"\\nTabuleiro (Q para dama, . vazio):\")\n",
+    "print(\"\\nTabuleiro (Q para rainha, . vazio):\")\n",
     "for i in model.I:\n",
     "    linha_str = \"\"\n",
     "    for j in model.J:\n",
