Atulizando referências e adicionando o problema da cooperativa agricola

--- a/PLI/rainhas_xadrez.ipynb
+++ b/PLI/rainhas_xadrez.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Problema retirado do livro [Otimização Combinatória e Meta-heurísticas (2015) - Marco Goldbarg, Elizabeth Goldbarg, Henrique Luna](https://a.co/d/dWM0snu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Problema"
    ]
   },
