--- a/PLI/tarifas_hospedagem.ipynb
+++ b/PLI/tarifas_hospedagem.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc8635d7",
+   "metadata": {},
+   "source": [
+    "Problema retirado do livro [Otimização Combinatória e Meta-heurísticas (2015) - Marco Goldbarg, Elizabeth Goldbarg, Henrique Luna](https://a.co/d/dWM0snu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f70a599f",
    "metadata": {},
    "source": [
